$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.12-14 (opened May 7, 2008)

	* capscale: accepts now other dissimilarity function than vegdist,
	and optionally uses metaMDSdist to manipulate dissimilarities
	similarly as metaMDS. This provides now a one-shot unconstrained
	principal coordinates analysis ("metaPCoA"), optionally with
	extended (flexible shortest path) dissimilarities. Incidentally
	this also implements a "new" possibly unpublished ordination
	method: extended distance based redundancy analysis.

	* metaMDSdist: argument 'add' gained new alternative "ignore" to
	do nothing with zero distances. This can only and should be used
	with metric scaling (cmdscale(), capscale()). 
	
Version 1.12-13 (closed May 7, 2008)

	* orditkplot: labels can be edited with double clicking, and
	shift-mouse allows zooming into smaller are in the plot.
	
Version 1.12-12 (closed May 1, 2008)

	* adonis: added calculation of coefficients both for the species
	(when data matrix was given) and for sites (both with the data
	matrices and dissimilarities).

	* betadisper: was not calculating distance to centroid correctly
	for observations where the imaginary distance to centroid was
	greater than the real distance (resulting in negative distance) 
	which resulted in NaN when we took the square root. betadisper() 
	now takes the absolute value of the combined distance before taking
	the square root. This is in-line with Marti Anderson's PERMDISP2.

Version 1.12-11 (closed April 23, 2008)

	* adonis: permutation tests fixed. The permutation statistics were
	wrongly calculated. The results will now be different than in
	older version, including the example(adonis). Basically, the
	reported statitistic used SS improvement compared to the residual
	of the complete model, but permutations used SS accumulation
	compared to the residual after the current model.

	* specaccum: returns item "individuals" or the average number of