@@ -4,6 +4,9 @@ VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 
 Version 1.12-14 (opened May 7, 2008)
 
+	* MOStest: new function to implement Mitchell-Olds & Shaw test for
+	the location of quadratic extreme in a defined interval.
+
 	* capscale: accepts now other dissimilarity function than vegdist,
 	and optionally uses metaMDSdist to manipulate dissimilarities
 	similarly as metaMDS. This provides now a one-shot unconstrained
